flask: male upravy z postrehu z minule

--- a/Témata/Flask/sablona/templates/ukazka.html
+++ b/Témata/Flask/sablona/templates/ukazka.html
@@ -18,14 +18,11 @@
         </ul>
     </nav>
 
-    <section id="sekce1">
         <h2>Nadpis druhé úrovně - sekce 1</h2>
         <p>Odstavec textu, který slouží jako běžný blok textu.</p>
-        <img src="static/dogeclass.webp" alt="Popis obrázku" width="200">
+        <img src="static/dogeclass.webp">
         <p><a href="https://www.example.com">Odkaz na externí stránku</a></p>
-    </section>
 
-    <section id="sekce2">
         <h2>Nadpis druhé úrovně - sekce 2</h2>
         <ol>
             <li>Číslovaný seznam - první položka</li>
@@ -35,9 +32,7 @@
             <li>Nečíslovaný seznam - první položka</li>
             <li>Nečíslovaný seznam - druhá položka</li>
         </ul>
-    </section>
 
-    <section id="sekce3">
         <h2>Nadpis druhé úrovně - sekce 3</h2>
         <table>
             <tr>
@@ -49,7 +44,6 @@
                 <td>Data 2</td>
             </tr>
         </table>
-    </section>
 
     <footer>
         <h2>Kontaktní formulář</h2>
