pridani ukazky na jinju

--- a/Témata/web/flask/interaktivni-aplikace/templates/bmi_form.html
+++ b/Témata/web/flask/interaktivni-aplikace/templates/bmi_form.html
@@ -11,7 +11,7 @@
         Váha (kg): <input type="text" name="weight" value="{{ weight }}"><br>
         <input type="submit" value="Vypočítej BMI">
     </form>
-    {% if result %}
+    {% if result is not none %}
         <h3>Vaše BMI: {{ result }}</h3>
     {% endif %}
 </body>
