--- a/Témata/web/flask/interaktivni-aplikace/templates/anketa.html
+++ b/Témata/web/flask/interaktivni-aplikace/templates/anketa.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="static/anketa.css">
 </head>
 <body>
-    <h1>O jakou novou funkci máme přidat jako první?</h1>
+    <h1>Jakou novou funkci máme přidat jako první?</h1>
     <form method="POST">
         <input type="radio" id="optionA" name="option" value="A">
         <label for="optionA">Možnost A</label><br>
